<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/green_darkest"
    tools:context=".view.authentication.login.UpdateLoginDetail">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="0dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Toolbar
                android:id="@+id/update_login_toolbar"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:background="@color/green_darkest"
                android:fitsSystemWindows="true"
                android:minHeight="?attr/actionBarSize"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar" />

            <View
                android:id="@+id/SplitLine_hor9"
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:layout_marginTop="8dp"
                android:background="@color/black"
                app:layout_constraintBottom_toTopOf="@+id/welcome_text"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/update_login_toolbar"
                app:layout_constraintVertical_bias="0.032" />

            <Button
                android:id="@+id/apply_btn"
                android:layout_width="0dp"
                android:layout_height="51dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:background="@drawable/button"
                android:text="Apply"
                android:textColor="@color/white"
                app:backgroundTint="@color/black"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/enterPassword"
                app:layout_constraintVertical_bias="0.138"
                app:layout_marginTopPercent="90%"
                app:layout_widthPercent="50%"
                tools:ignore="MissingConstraints" />

            <TextView
                android:id="@+id/welcome_text"
                android:layout_width="0dp"
                android:layout_height="51dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="100dp"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="88dp"
                android:ellipsize="middle"
                android:gravity="center"
                android:text="Please Enter New Email and Password"
                android:textColor="@color/white"
                android:textSize="20sp"
                app:layout_constraintBottom_toTopOf="@+id/enterPassword"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.834"
                tools:ignore="MissingConstraints" />

            <EditText
                android:id="@+id/enterPassword"
                android:layout_width="0dp"
                android:layout_height="51dp"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="404dp"
                android:ems="10"
                android:backgroundTint="@color/white"

                android:foregroundGravity="center_vertical|center|center_horizontal"
                android:gravity="center|center_horizontal|center_vertical"
                android:hint="Enter New Password"
                android:imeOptions="actionDone"
                android:inputType="textPassword"
                android:shadowColor="@color/purple_700"
                android:textColor="@color/white"
                android:textColorHint="@color/white"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/welcome_text"
                tools:ignore="MissingConstraints" />

            <EditText
                android:id="@+id/enterEmail"
                android:layout_width="0dp"
                android:layout_height="51dp"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="8dp"
                android:ems="10"
                android:backgroundTint="@color/white"
                android:foregroundGravity="center_vertical|center_horizontal"
                android:gravity="center_horizontal|center_vertical"
                android:hint="Enter  New Email"
                android:inputType="textPersonName"
                android:textColor="@color/white"
                android:textColorHighlight="@color/white"
                android:textColorHint="@color/common_google_signin_btn_text_dark_pressed"
                app:layout_constraintBottom_toTopOf="@+id/enterPassword"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                tools:ignore="MissingConstraints" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>