<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/settingFragmentLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/green_darkest"
    tools:context=".view.setting.SettingFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:fillViewport="true"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/guidelineBottom2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">


            <Button
                android:id="@+id/logout"
                android:layout_width="379dp"
                android:layout_height="50dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="16dp"
                android:onClick="logout"
                android:text="Logout"
                android:textColor="@color/Aqua"
                app:backgroundTint="@color/green_darkest"
                app:layout_constraintBottom_toTopOf="@id/update_login_btn"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/SplitLine_hor_about_logout"
                tools:ignore="MissingConstraints" />

            <TextView
                android:id="@+id/Setting_id"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="Setting"
                android:textColor="@color/cardview_light_background"
                android:textSize="24sp"
                app:layout_constraintBottom_toTopOf="@+id/horizontal_line_1"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <View
                android:id="@+id/SplitLine_hor_delete_account_version"
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="50dp"
                android:background="@color/black"
                app:layout_constraintBottom_toTopOf="@id/version"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/delete_account_btn" />


            <View
                android:id="@+id/SplitLine_hor_about_logout"
                android:layout_width="411dp"
                android:layout_height="1dp"
                android:background="@color/black"
                app:layout_constraintBottom_toTopOf="@id/logout"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_avout"
                tools:layout_editor_absoluteY="254dp" />

            <Button
                android:id="@+id/update_login_btn"
                android:layout_width="379dp"
                android:layout_height="50dp"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="16dp"
                android:onClick="updateLoginDetain"
                android:text="update Login"
                android:textColor="@color/Aqua"
                app:backgroundTint="@color/green_darkest"
                app:layout_constraintBottom_toTopOf="@+id/delete_account_btn"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/logout"
                tools:ignore="MissingConstraints" />

            <Button
                android:id="@+id/delete_account_btn"
                android:layout_width="379dp"
                android:layout_height="50dp"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="32dp"
                android:text="Delete Account"
                android:textColor="@color/Aqua"
                app:backgroundTint="@color/green_darkest"
                app:layout_constraintBottom_toTopOf="@+id/SplitLine_hor_delete_account_version"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/update_login_btn"
                tools:ignore="MissingConstraints" />

            <TextView
                android:id="@+id/about"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:text="About"
                android:textColor="@color/white"
                android:textSize="16sp"
                app:layout_constraintBottom_toTopOf="@id/tv_avout"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/horizontal_line_1" />

            <TextView
                android:id="@+id/tv_avout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginEnd="32dp"
                android:layout_marginBottom="8dp"
                android:text="This app is dating app with personality included on it. It also provides location based match finding. If you like it add your personality, location  with other details and find your love sooner than later!"
                android:textColor="@color/white"
                android:textSize="16sp"
                app:layout_constraintBottom_toTopOf="@id/SplitLine_hor_about_logout"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/about" />

            <View
                android:id="@+id/horizontal_line_1"
                android:layout_width="411dp"
                android:layout_height="1dp"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="16dp"
                android:background="@color/black"
                app:layout_constraintBottom_toTopOf="@id/about"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/Setting_id" />

            <TextView
                android:id="@+id/version"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="16dp"
                android:text="version: 1.0"
                android:textColor="@color/white"
                app:layout_constraintBottom_toTopOf="@id/copy"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.498"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/SplitLine_hor_delete_account_version" />

            <TextView
                android:id="@+id/copy"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:text="copy 2023"
                android:textColor="@color/white"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/version" />

        </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineBottom2"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.9" />

</androidx.constraintlayout.widget.ConstraintLayout>

